app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-app
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: simple-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
